[package]
name = "binance-wss-tob"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.39.2", features = ["full"] }
tokio-tungstenite = { version = "0.23.1", features = ["native-tls"] }
futures-util = "0.3.3"
serde_json = "1.0"
chrono = "0.4.38"
clap = {version = "4.5", features = ["derive"] }